--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home"
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home"
                                         aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
                                         aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"
                                         aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download"
-                                        aria-hidden="true"></i><span>Download CV</span></a>
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i
+                                        class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            Frejs Väg 1, Norsborg Sweden
+                            Norsborg, Sweden
                         </p>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            555 204 1994
+                            555 204 1973
                         </p>
                     </div>
                 </div>
@@ -116,45 +116,50 @@
                         <h3 class="section-heading uppercase">About Me</h3>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-10 offset-sm-0 col-sm-4 col-md-6">
                 <div class="row">
-                    <div class="col-2">
-                        <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p>
+                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical
+                                    experience that I bring to every project.
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-10">
-                        <h4 class="three-reasons-heading uppercase">What do I do?</h4>
-                        <p>I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience
-                            that I bring to every project.</p>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <p>
+                                    I follow form as well as function. I know that the aesthetics of effective design
+                                    combined with application speed, security and reliability combine to create a great
+                                    user experience.
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-10 offset-sm-0 col-sm-4 col-md-6">
-                <div class="row">
-                    <div class="col-2">
-                        <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
-                    </div>
-                    <div class="col-10">
-                        <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
-                        <p>I follow form as well as function. I know that the aesthetics of effective
-                            design combined with application speed, security and reliability combine to
-                            create a great user experience.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 offset-sm-0 col-sm-4 col-md-6">
-                <div class="row">
-                    <div class="col-2">
-                        <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
-                    </div>
-                    <div class="col-10">
-                        <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
-                        <p>I work quickly and effectively in getting things built and working across the stack. I'm an
-                            excellent
-                            communicator who thrives in bright and enthusiastic teams and
-                            I'm also a self starter when working solo.</p>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                                <p>
+                                    I work quickly and effectively in getting things built and working across the stack.
+                                    I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm
+                                    also a self starter when working solo.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -166,17 +171,18 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full Stark Web Developer. Skilled in everything from HTML to Heroku.
-                    The capacity for structural and design thinking.
+                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and
+                    design thinking.
                 </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="#" target="_blank" class="cv-pdf"></a>
-                    <i class="fa fa-download" aria-hidden="true"></i>
-                    <span class="sr-only">Download link.</span>
+                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
+                        <i class="fa fa-download" aria-hidden="true"></i>
+                        <span class="sr-only">Download link.</span>
+                    </a>
                 </p>
             </div>
             <div class="col-sm-4">
@@ -218,7 +224,6 @@
                             <span class="sr-only">YouTube</span>
                         </a>
                     </li>
-
                 </ul>
             </div>
         </div>
