--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,11 @@
         type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Madu</title>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("user_vanqZMkpPOADQP2iEpqKS");
+        })();
+    </script>
 </head>
 
 <body>
@@ -55,17 +60,12 @@
     <div class="col">
         <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
         <h5 class="uppercase text-center">Lets work together!</h5>
-        <div class="center-form">
-        <form>
-            <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-            <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-            <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description"
-                required></textarea>
-            <div class="form-row text-center">
-                <div class="col">
-                    <button type="submit" class="btn btn-secondary">Send Project Request</button>
-                </div>
-            </div>
+    <div class="center-form">
+        <form onsubmit="return sendMail(this);" method="POST">
+            <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
+            <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
+            <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
+            <button type="submit" class="btn btn-secondary center-block">Send Project Request</button>
         </form>
       </div>
     </div>
@@ -133,6 +133,7 @@
             </div>
         </div>
     </footer>
+    <script src="assets/js/sendEmail.js"></script>
 </body>
 
 </html>
