Updated contact information on contact.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            Norsborg, Sweden
+                            Frejs Väg 1, Norsborg Sweden
                         </p>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            555 204 1973
+                            +46 793 527 753
                         </p>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            madu.omenka@live.se
+                            madu.omenka@hotmail.com
                         </p>
                     </div>
                 </div>
