--- a/index copy.html
+++ b/index copy.html
@@ -105,7 +105,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            madu.omenka@live.se
+                            madu.omenka@hotmail.com
                         </p>
                     </div>
                 </div>
