--- a/interests.html
+++ b/interests.html
@@ -76,11 +76,11 @@
                                 <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Coding Grace</h4>
+                                <h4 class="three-reasons-heading uppercase">Stockholm Tech Show</h4>
                                 <p>
-                                    Coding Grace are a group of developers based in Ireland who love to code and do other geeky and not necessarily crafty activities. Some of us code full-time, or just for fun (or both). We have people who are part of other technical user groups such as
-                                    Dublin ALT.NET, GameCraft, Python Ireland, Ruby Ireland and more.
-                                    <a href="https://codinggrace.com/" target="_blank">Coding Grace</a>
+                                    The Hackathon is one of the highlights of the Stockholm Tech Show and Amazon offers participants 
+                                    a unique opportunity to dive deep into the rapidly changing world of technological innovation.
+                                    <a href="https://codinggrace.com/" target="_blank">Stockholm Tech Show</a>
                                 </p>
                             </div>
                         </div>
@@ -91,11 +91,10 @@
                                 <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Django Girls</h4>
+                                <h4 class="three-reasons-heading uppercase">CI Student</h4>
                                 <p>
-                                    Django Girls is a non-profit organization and a community that empowers and helps women to organize free, one-day programming workshops by providing tools, resources and support. We are a volunteer run organization with hundreds of people contributing
-                                    to bring more amazing women into the world of technology.
-                                    <a href="https://djangogirls.org/" target="_blank">Django Girls</a>
+                                    Student conference at Code Institute. Upcoming developer looking forward to meet experience developers from across the grobe.
+                                    <a href="https://djangogirls.org/" target="_blank">CI Student</a>
                                 </p>
                             </div>
                         </div>
@@ -106,11 +105,11 @@
                                 <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Full Stack NY</h4>
+                                <h4 class="three-reasons-heading uppercase">Full Stack Dev</h4>
                                 <p>
                                     Our meetup is an event where web designers and developers can come together to learn from and teach each other about emerging technologies. While speakers at Full Stack focus primarily on angularjs, react, node, hapiJS, espress, plain ole' JavaScript,
                                     HTML, and CSS, we encourage all local web professionals to join us for vivid discussions around technology across the stack in any language.
-                                    <a href="https://www.meetup.com/javascript-full-stack-development/" target="_blank">Full Stack NY</a>
+                                    <a href="https://www.meetup.com/javascript-full-stack-development/" target="_blank">Full Stack DeV</a>
                                 </p>
                             </div>
                         </div>
