--- a/resume.html
+++ b/resume.html
@@ -62,21 +62,21 @@
                     </div>
                 </div>
                 <div class="history-items">
-                    <div class="timeline-item" data-dates="02/1998 - 04/2004">
-                        <h4>National College of Art and Design (NCAD)</h4>
-                        <p>Sculptor in residence</p>
+                    <div class="timeline-item" data-dates="02/2008 - 03/2012">
+                        <h4>Premo KB Stockholm</h4>
+                        <p>Delivery Driver</p>
                     </div>
-                    <div class="timeline-item" data-dates="04/2004 - 06/2008">
-                        <h4>Fisher and Diaz Funeral Directors</h4>
-                        <p>Junior Embalmer</p>
+                    <div class="timeline-item" data-dates="04/2012 - 12/2015">
+                        <h4>Fazer Food Service AB</h4>
+                        <p>Restaurant Assistant</p>
                     </div>
-                    <div class="timeline-item" data-dates="06/2008 - 06/2011">
-                        <h4>Phantom Design Inc. Dublin</h4>
-                        <p>Junior Front End Developer</p>
+                    <div class="timeline-item" data-dates="11/2017 - 05/2024">
+                        <h4>Ezeani Transport AB</h4>
+                        <p>Director | Transport Manager</p>
                     </div>
-                    <div class="timeline-item" data-dates="06/2011 - Present">
-                        <h4>Hooli Inc. Silicon Valley</h4>
-                        <p>Full Stack Web Developer</p>
+                    <div class="timeline-item" data-dates="07/2023 - 05/2024">
+                        <h4>Code Institute Student</h4>
+                        <p>Advance Front End Developer</p>
                     </div>
                 </div>
             </div>
