Tidying up resume.html

--- a/resume.html
+++ b/resume.html
@@ -64,19 +64,15 @@
                 <div class="history-items">
                     <div class="timeline-item" data-dates="02/2008 - 03/2012">
                         <h4>Premo KB Stockholm</h4>
-                        <p>Delivery Driver</p>
+                        <p>Distribution manager</p>
                     </div>
                     <div class="timeline-item" data-dates="04/2012 - 12/2015">
                         <h4>Fazer Food Service AB</h4>
-                        <p>Restaurant Assistant</p>
+                        <p>Assistant manager</p>
                     </div>
                     <div class="timeline-item" data-dates="11/2017 - 05/2024">
                         <h4>Ezeani Transport AB</h4>
                         <p>Director | Transport Manager</p>
-                    </div>
-                    <div class="timeline-item" data-dates="07/2023 - 05/2024">
-                        <h4>Code Institute Student</h4>
-                        <p>Advance Front End Developer</p>
                     </div>
                 </div>
             </div>
