--- a/resume.html
+++ b/resume.html
@@ -105,9 +105,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
-                                    I specialize in data-driven web applications. Many of my projects utilise
-                                    document-based data. I use Python and Django in conjunction with MongoDB to process
-                                    and present information.
+                                    I have utilized Python and Django for my recent projects.
                                 </p>
                             </div>
                         </div>
